修复了在controller层得到当前用户信息的方法